Fixed dropdown align on medium screen sizes

--- a/packages/react/src/components/header/components/navigationLink/navigationLinkDropdown/NavigationLinkDropdown.module.scss
+++ b/packages/react/src/components/header/components/navigationLink/navigationLinkDropdown/NavigationLinkDropdown.module.scss
@@ -19,10 +19,10 @@
   border: 1px solid var(--color-black-20);
   display: flex;
   flex-direction: column;
-  left: calc(-1 * var(--spacing-m));
+  left: calc(-1 * var(--header-margin));
   list-style: none;
   min-width: 280px;
-  padding: 0 var(--spacing-xs) 0 0;
+  padding: 0;
   position: absolute;
   top: 100%;
   z-index: 1;
@@ -30,7 +30,7 @@
   .dropdownLink {
     font-size: var(--fontsize-body-m);
     margin: calc(-1 * var(--header-focus-outline-width));
-    padding: 10px var(--spacing-m) 14px var(--spacing-m);
+    padding: 10px var(--spacing-m) 14px var(--header-margin);
   }
 
   .dropdownLink:focus {
